--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/employee/list.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/employee/list.cshtml
@@ -11,11 +11,11 @@
 
                 <div>
                     <div>
-
+                        
                         <js-tree tree-name="employees"
+                                 tree-plugins="search"
                                  tree-ajax="/api/@ViewBag.CurrentCulture/Employee/GetEmployeeTree">
-
-                        </js-tree>
+                         </js-tree>
 
                     </div>
 
