Поиск в дереве организаций/сотрудников

--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/employee/list.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/employee/list.cshtml
@@ -12,7 +12,8 @@
                 <div>
                     <div>
                         
-                        <js-tree tree-name="employees"
+                        <js-tree tree-allnode="true"
+                                 tree-name="employees"
                                  tree-plugins="search"
                                  tree-ajax="/api/@ViewBag.CurrentCulture/Employee/GetEmployeeTree">
                          </js-tree>
