--- a/Presentation/HelpDesk.WorkerWebApp/Views/Account/Login.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/Views/Account/Login.cshtml
@@ -30,10 +30,8 @@
         </label>
     </div>
            
-    <div class="row">
-        <div class="col-md-12">
-            <button class="btn btn-lg btn-block btn-default" type="submit">@Resource.Action_Login</button>
-        </div>
+    <div style="text-align: center">
+        <button class="btn btn-lg btn-block btn-default center-block" style="width:60%" type="submit">@Resource.Action_Login</button>
     </div>
 
     <div style="padding-top: 20px" class="text-center">
