--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/main.css
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/main.css
@@ -144,3 +144,9 @@ textarea.error {
     overflow: hidden;
     display: block;
 }
+
+.linkdisabled {
+  cursor: not-allowed;
+  pointer-events: none;
+  color: lightgray;
+}
