--- a/Presentation/HelpDesk.CabinetWebApp/Views/Account/Register.cshtml
+++ b/Presentation/HelpDesk.CabinetWebApp/Views/Account/Register.cshtml
@@ -52,10 +52,8 @@
             <button class="btn btn-lg btn-block btn-default" type="submit">@Resource.Action_Register</button>
         </div>
         <div class="col-md-5">
-            <a class="btn btn-lg btn-block btn-default" href="@Url.Action("Login", "Account")">@Resource.Action_Login</a>
+            <a href="@Url.Action("Login", "Account")">@Resource.Action_Login</a>
         </div>
     </div>    
     
 }
-
-
