--- a/Presentation/HelpDesk.CabinetWebApp/Views/Account/Login.cshtml
+++ b/Presentation/HelpDesk.CabinetWebApp/Views/Account/Login.cshtml
@@ -35,7 +35,7 @@
             <button class="btn btn-lg btn-block btn-default" type="submit">@Resource.Action_Login</button>
         </div>
         <div class="col-md-7">
-            <a class="btn btn-lg btn-block btn-default" href="@Url.Action("Register", "Account", new { ReturnUrl = ViewBag.ReturnUrl })">@Resource.Action_Register</a>
+            <a href="@Url.Action("Register", "Account", new { ReturnUrl = ViewBag.ReturnUrl })">@Resource.Action_Register</a>
         </div>
     </div>
 
