--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/layout/layout.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/layout/layout.cshtml
@@ -66,7 +66,17 @@
             background-color: #e7e7e7;
             vertical-align:middle;
         }
+
+        .modal-open {
+            overflow: visible;
+        }
+
+        .modal-open, .modal-open .navbar-fixed-top, .modal-open .navbar-fixed-bottom {
+            padding-right: 0px !important;
+            
+        }
     </style>
+    
 </head>
 <body>
     <div class="wrapper">
