--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/main.css
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/main.css
@@ -150,3 +150,8 @@ textarea.error {
   pointer-events: none;
   color: lightgray;
 }
+
+.buttons td {
+    padding-left:  4px;
+    padding-right: 4px;
+}
