--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/request/request.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/request/request.cshtml
@@ -1,6 +1,6 @@
 ﻿@using HelpDesk.WorkerWebApp.Resources
 @using HelpDesk.WorkerWebApp.Models
-
+@using Microsoft.AspNet.Identity;
 
 <div ng-controller="app.views.request.request as vm" style="width: 60%" class="center-block">
     
