--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/requestHistory/list.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/requestHistory/list.cshtml
@@ -213,9 +213,9 @@
                 <td>
                     <table>
                         <tr class="buttons">
-                            <td ng-show="t.Archive != true"><span  ng-click="vm.delete(t.Id)" style="color: lightgrey; cursor: pointer; font-size: 14pt" class="glyphicon glyphicon-remove-circle"></span></tdng-show="t.Archive>
-                            <td ng-show="t.Archive != true"><span  ng-click="vm.edit(t.Id)" title="@Resource.Title_EditRequest..." style="color: lightgrey; cursor: pointer" class="glyphicon glyphicon-pencil"></span></tdng-show="t.Archive>
-                            <td ng-show="t.Archive == true"><span  style="color:green; font-size: 18pt">A</span></tdng-show="t.Archive>
+                            <td ng-show="t.Archive != true"><span  ng-click="vm.delete(t.Id)" style="color: lightgrey; cursor: pointer; font-size: 14pt" class="glyphicon glyphicon-remove-circle"></span></td>
+                            <td ng-show="t.Archive != true"><span  ng-click="vm.edit(t.Id)" title="@Resource.Title_EditRequest..." style="color: lightgrey; cursor: pointer" class="glyphicon glyphicon-pencil"></span></td>
+                            <td ng-show="t.Archive == true"><span  style="color:green; font-size: 18pt">A</span></td>
                             <td><span ng-click="vm.createRequestByRequest(t.Id)" title="@Resource.Title_CreateRequest..." style="color: lightgrey; cursor: pointer" class="glyphicon glyphicon-send"></span></td>
                         </tr>
                     </table>
