Исправлен регрессионный баг

--- a/Presentation/HelpDesk.CabinetWebApp/Views/Shared/_LangMenu.cshtml
+++ b/Presentation/HelpDesk.CabinetWebApp/Views/Shared/_LangMenu.cshtml
@@ -1,5 +1,4 @@
-﻿@using HelpDesk.CabinetWebApp.Helpers
-
+﻿@using HelpDesk.Web.Common.Helpers
 @if (ViewBag.Cultures != null && ((IList<string>)ViewBag.Cultures).Count > 1)
 {
 <ul class="nav nav-pills pull-right">
