--- a/Presentation/HelpDesk.CabinetWebApp/App/Main/views/layout/layout.cshtml
+++ b/Presentation/HelpDesk.CabinetWebApp/App/Main/views/layout/layout.cshtml
@@ -3,6 +3,7 @@
 @using HelpDesk.CabinetWebApp.Helpers
 @using HelpDesk.CabinetWebApp.Resources
 @model HelpDesk.CabinetWebApp.Models.AppLayoutModel
+@using HelpDesk.Web.Common.Helpers
 
 <!DOCTYPE html>
 <html lang="en">
