--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/layout/layout.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/layout/layout.cshtml
@@ -3,7 +3,7 @@
 @using HelpDesk.WorkerWebApp.Helpers
 @using HelpDesk.WorkerWebApp.Resources
 @model HelpDesk.WorkerWebApp.Models.AppLayoutModel
-
+@using HelpDesk.Web.Common.Helpers
 <!DOCTYPE html>
 <html lang="en">
 <head>
