Продолжение разработки - шаблоны писем

--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/UserRegisterAppEvent.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/UserRegisterAppEvent.cshtml
@@ -1,11 +1,12 @@
 ﻿@using HelpDesk.ConsumerEventSrvice.DTO
-@model UserRequestAppEventSubscribeDTO
+@model UserEventSubscribeDTO
 
 <!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    
 </head>
 <body>
     <p>
