Продолжение разработки - отправка сообщений

--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestAppEvent.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestAppEvent.cshtml
@@ -1,4 +1,4 @@
-﻿@using HelpDesk.ConsumerEventSrvice.DTO
+﻿@using HelpDesk.ConsumerEventService.DTO
 @model UserRequestAppEventSubscribeDTO
 
 <!DOCTYPE html>
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p>
-        
+        <div>RequestId = @Model.RequestId</div>
     </p>
     <p>
         
