--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/UserRegisterAppEvent.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/UserRegisterAppEvent.cshtml
@@ -1,4 +1,4 @@
-﻿@using HelpDesk.ConsumerEventSrvice.DTO
+﻿@using HelpDesk.ConsumerEventService.DTO
 @model UserEventSubscribeDTO
 
 <!DOCTYPE html>
