--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestDeedlineAppEvent.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestDeedlineAppEvent.cshtml
@@ -1,4 +1,4 @@
-﻿@using HelpDesk.ConsumerEventSrvice.DTO
+﻿@using HelpDesk.ConsumerEventService.DTO
 @model UserDeedlineAppEventSubscribeDTO
 
 <!DOCTYPE html>
