--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/UserPasswordRecoveryAppEvent.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/UserPasswordRecoveryAppEvent.cshtml
@@ -1,4 +1,4 @@
-﻿@using HelpDesk.ConsumerEventSrvice.DTO
+﻿@using HelpDesk.ConsumerEventService.DTO
 @model UserPasswordRecoveryAppEventSubscribeDTO
 
 <!DOCTYPE html>
