--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestAppEvent.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestAppEvent.cshtml
@@ -8,9 +8,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
-    <p>
-        <div>RequestId = @Model.RequestId</div>
-    </p>
+    <h>RequestId = @Model.RequestId</h>
     <p>
         
     </p>
