--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestDeedlineAppEvent.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestDeedlineAppEvent.cshtml
@@ -1,4 +1,5 @@
 ﻿@using HelpDesk.ConsumerEventService.DTO
+@using HelpDesk.ConsumerEventService.Resources
 @model UserDeedlineAppEventSubscribeDTO
 
 <!DOCTYPE html>
@@ -6,14 +7,20 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    
 </head>
 <body>
+    <h>@Resourse.Subject_RequestDeedlineAppEventConsumer</h>
     <p>
-        
-    </p>
-    <p>
-        
+        <li>
+            @foreach (var item in Model)
+            {
+                <ul>
+                    <span>@item.RequestId</span>
+                    <span>@item.RequestStatusName</span>
+                    <span>@item.DateEndPlan</span>
+                </ul>
+            }
+        </li>
     </p>
 
     
