Настройка подписки в личном кабинете

--- a/Presentation/HelpDesk.CabinetWebApp/App/Main/views/subscribe/subscribe.cshtml
+++ b/Presentation/HelpDesk.CabinetWebApp/App/Main/views/subscribe/subscribe.cshtml
@@ -1,4 +1,4 @@
-﻿@using HelpDesk.WorkerWebApp.Resources
+﻿@using HelpDesk.CabinetWebApp.Resources
 
 <div ng-controller="app.views.subscribe.subscribe as vm" style="width: 40%" class="center-block">
     
