--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/requestHistory/events.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/requestHistory/events.cshtml
@@ -1,6 +1,7 @@
 ﻿@using HelpDesk.WorkerWebApp.Resources
 
-<td colspan="10">
+<td colspan="2"></td>
+<td colspan="8">
     <table class="table">
         <colgroup>
             <col style="width: 25%" />
