--- a/Presentation/HelpDesk.CabinetWebApp/App/Main/views/requestHistory/events.cshtml
+++ b/Presentation/HelpDesk.CabinetWebApp/App/Main/views/requestHistory/events.cshtml
@@ -1,6 +1,7 @@
 ﻿@using HelpDesk.CabinetWebApp.Resources
 
-<td colspan="9">
+<td colspan="2"></td>
+<td colspan="7">
     <table class="table">
         <colgroup>
             <col style="width: 33%" />
